turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: value unary_! is not a member of java.awt.Color
while(!getCouleurSol()==colors(n)){
      ^LangtonsAnt:7: error: not found: value color
	col=color(n)
            ^